--- a/学习记录.md
+++ b/学习记录.md
@@ -91,3 +91,29 @@ Q6有意思
 #### 2022/9/29
 
 完成了cat的第一部分
+
+
+
+#### 2022/10/25
+
+开始lab6 完成Q1、Q2，
+
+Q3卡了
+
+
+
+#### 2022/10/27
+
+完成Q3、Q4、Q5
+
+开始lab7 
+
+完成Q1、Q2，
+
+晚上完成Q3、Q4、Q5、Q6、Q7、
+
+
+
+#### 2022/10/28
+
+完成Q8、Q9，lab7 完成，游戏可行
