--- a/学习记录.md
+++ b/学习记录.md
@@ -96,7 +96,9 @@ Q6有意思
 
 #### 2022/10/25
 
-开始lab6 完成Q1、Q2，
+开始lab6 list、迭代器
+
+完成Q1、Q2，
 
 Q3卡了
 
@@ -106,7 +108,7 @@ Q3卡了
 
 完成Q3、Q4、Q5
 
-开始lab7 
+开始lab7 面向对象程序设计
 
 完成Q1、Q2，
 
@@ -117,3 +119,11 @@ Q3卡了
 #### 2022/10/28
 
 完成Q8、Q9，lab7 完成，游戏可行
+
+开始lab8 链表 完成Q1
+
+
+
+#### 2022/10/29
+
+完成lab8 Q2、Q3
