同步最新进度

--- a/学习记录.md
+++ b/学习记录.md
@@ -157,3 +157,17 @@ Q3、Q4、Q5
 
 #### 2023/1/11
 lab10 Q6 Q7 语法细节还是不清晰
+
+
+
+#### 2023/1/18
+
+整理发现hw1和hw2还没写，开始写一下
+
+hw1 Q1、Q2、Q3、Q4
+
+hw2 Q1、Q2
+
+
+
+hw4 Q1非题目、Q2、Q3、Q4
