--- a/学习记录.md
+++ b/学习记录.md
@@ -224,7 +224,7 @@ lab3也未完成，只写了Q1-Q4，这是有点离谱了
 
 
 
-#### 2023/2/23
+#### 2023/2/13
 
 新的学期已经开始，旧的资源发布在
 
@@ -236,4 +236,22 @@ https://inst.eecs.berkeley.edu/~cs61a/fa22/
 
 hw4 完成
 
-hw5 Generators  Q1 
+hw5 Generators  Q1
+
+
+
+#### 2023/2/14
+
+hw5 Generators   Q2 Q3，掌握不好
+
+
+
+#### 2023/2/16
+
+推进至
+
+hw5 Generators   Q4 相对前边几题还算简单
+
+Q5 经过分解，也不难得出，
+
+Generators生成器的关键在于要将生成器看作每到yield就中断待命的函数，一直不停息，这样就能避免和常规函数混淆，无法灵活使用的问题
