--- a/学习记录.md
+++ b/学习记录.md
@@ -5,34 +5,27 @@
 完成情况：
 
 - [x] lab00
-
 - [x] lab01
-
 - [x] lab02
 - [ ] lab03 (optional)
-
 - [x] lab04
-
 - [x] lab05
 - [x] lab06
 - [x] lab07
-
 - [x] lab08
 - [ ] lab09(optional)
-
 - [x] lab10
 - [ ] lab11(optional)
 - [ ] lab12
 - [ ] lab13(optional)
-
 - [x] hw01
-
 - [x] hw02
-
 - [x] hw03
 - [x] hw04
-- [ ] hw05
-- [ ] hw06
+- [x] hw05
+- [x] hw06
+  - [ ] 选做
+
 - [ ] hw07
 - [ ] hw08
 - [ ] hw09
@@ -252,6 +245,26 @@ hw5 Generators   Q2 Q3，掌握不好
 
 hw5 Generators   Q4 相对前边几题还算简单
 
-Q5 经过分解，也不难得出，
+Q5 经过分解，也不难得出，hw5全部完成
 
 Generators生成器的关键在于要将生成器看作每到yield就中断待命的函数，一直不停息，这样就能避免和常规函数混淆，无法灵活使用的问题
+
+
+
+#### 2023/2/21
+
+完成hw6 Q2
+
+
+
+#### 2023/3/7
+
+hw6 Q3 ，link的头部和尾部分开来处理，我们的逻辑只处理头部，尾部交给递归，各个情况描述要准确，避免模糊
+
+hw6 Q4 卡了，好像不需要递归
+
+
+
+#### 2023/3/16
+
+hw6 Q4就正常倒循环从头部插入就行了，很简单，总共5行，不过参考的那个是用尾插法，使用到了之前没想到的办法，比如pos.rest，new_node = Link(val)和pos = pos.rest之类的操作
