--- a/学习记录.md
+++ b/学习记录.md
@@ -268,3 +268,9 @@ hw6 Q4 卡了，好像不需要递归
 #### 2023/3/16
 
 hw6 Q4就正常倒循环从头部插入就行了，很简单，总共5行，不过参考的那个是用尾插法，使用到了之前没想到的办法，比如pos.rest，new_node = Link(val)和pos = pos.rest之类的操作
+
+
+
+进行hw7，Q1没啥好说的，Q2中犯了`(cdr asc-lst)`写成`cdr(asc-lst)`的错误， Scheme 语言的使用非常难受，尤其是`'`的含义，听说它是符号类型，那为什么函数参数要用符号类型
+
+Q3完成 ，主要注意格式就好了
