--- a/学习记录.md
+++ b/学习记录.md
@@ -280,3 +280,11 @@ Q3完成 ，主要注意格式就好了
 #### 2023/8/8
 
 光阴似箭啊，重新评估下，那些scm相关的鬼东西就先略过，那么剩下的就是lab03、09，hw06和project了
+
+poject1 Q0
+
+
+
+#### 2023/8/9
+
+poject1 Q1
