--- a/学习记录.md
+++ b/学习记录.md
@@ -315,5 +315,9 @@ poject2 cat Q6 , 禁止使用循环，不得不用递归，导致想复杂了，
 
 poject1 hog Q8
 
-#### 2023/8/30
+#### 2023/8/31
 poject1 hog Q9 Q10 Q11
+
+#### 2023/9/1
+poject1 hog Q12
+最终的策略还是按照提示来给出，效果稍稍优于Q11中的square_strategy
