--- a/学习记录.md
+++ b/学习记录.md
@@ -321,3 +321,9 @@ poject1 hog Q9 Q10 Q11
 #### 2023/9/1
 poject1 hog Q12
 最终的策略还是按照提示来给出，效果稍稍优于Q11中的square_strategy
+
+#### 2023/9/2
+
+提交两篇到blog
+
+poject2 cat Q7
