--- a/学习记录.md
+++ b/学习记录.md
@@ -326,4 +326,10 @@ poject1 hog Q12
 
 提交两篇到blog
 
-poject2 cat Q7
+poject2 cat Q7 和上一道完全一样的思路，一把过
+
+#### 2023/9/13
+poject2 cat Q8
+
+#### 2023/9/14
+poject2 cat Q9
