--- a/学习记录.md
+++ b/学习记录.md
@@ -333,3 +333,8 @@ poject2 cat Q8
 
 #### 2023/9/14
 poject2 cat Q9
+
+#### 2023/9/26
+poject2 cat Q10
+是一些相对繁琐的操作，想不到简单的解决办法的情况下，用最谨慎的方式完成了整体逻辑，在使用提供的方法取代[]来获取match对象的内容后获得成功
+cat完成，逾期360 days
