--- a/学习记录.md
+++ b/学习记录.md
@@ -333,3 +333,20 @@ poject2 cat Q8
 
 #### 2023/9/14
 poject2 cat Q9
+
+#### 2023/9/26
+poject2 cat Q10
+是一些相对繁琐的操作，想不到简单的解决办法的情况下，用最谨慎的方式完成了整体逻辑，在使用提供的方法取代[]来获取match对象的内容后获得成功
+cat完成，逾期360 days
+
+#### 2023/10/5
+配置环境，安装conda、python、vscode
+完成了Q0。但是提交比较困难，暂缓
+
+
+#### 2023/10/6
+Q1,没法解锁，就没法test
+
+
+#### 2023/10/8
+同步ant的Q0、Q1
